# spotify-lists

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-python.yml
src/: __init__.py  auth.py  cli.py  fetch.py  io.py  models.py
src/spotify_lists/: __init__.py  __main__.py  auth.py  cli.py  fetch.py  io.py  models.py
stubs/spotipy/: __init__.pyi  exceptions.pyi  oauth2.pyi
tests/: conftest.py  test_fetch.py  test_fetch_helpers.py  test_io.py
