[project]
name            = "spotify_lists"
version         = "0.1.0"
description     = "Work with Spotify Playlists"
authors         = [
    { name = "Juan Rubio", email = "jcrubio@gmail.com" },
]
dependencies    = [
    "click>=8.3.1",                                         # CLI framework
    "python-dotenv>=1.2.2",                                 #
    "pyyaml>=6.0.3",                                        #
    "rich>=14.3.3",                                         # Console display and color
    "spotipy>=2.26.0",                                      # Spotify API
]
readme          = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "mypy>=1.19.1",                                         # Python typing
    "ruff>=0.15.7",                                         # Linter and Formatter for Python
    "types-pyyaml>=6.0.12.20260408",                        # Stub with types for PyYAML
]

[project.urls]
Homepage   = "https://github.com/jzer7/spotify-lists"
Repository = "https://github.com/jzer7/spotify-lists"

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]

[tool.coverage.run]
branch = true

[tool.mypy]
files = [
    "src",
    "tests",
]
check_untyped_defs          = true
disallow_any_generics       = true
disallow_any_unimported     = true # To offset someone having 'ignore_missing_imports'
disallow_incomplete_defs    = true
disallow_untyped_decorators = true
disallow_untyped_defs       = true # TOP
no_implicit_optional        = true
show_error_codes            = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_ignores         = true

exclude = ["backups/", "build", "dist", ".venv"]

[tool.pytest.ini_options]
addopts = "--cov=. --no-cov-on-fail --cov-fail-under=80.0 --strict-config --strict-markers"
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
src = [
    "src",
]

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
package = true
