[project]
name            = "spotify_lists"
version         = "0.1.0"
authors         = [
    { name = "Juan Rubio", email = "jcrubio@gmail.com" },
]
description     = "Work with Spotify Playlists"
dependencies    = [
    "click>=8.3.2",                                         # CLI framework
    "python-dotenv>=1.2.2",                                 #
    "pyyaml>=6.0.3",                                        #
    "rich>=15.0.0",                                         # Console display and color
    "spotipy>=2.26.0",                                      # Spotify API
]
readme          = "README.md"
requires-python = ">=3.12"
license         = "MIT"
license-files   = ["LICENSE"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
]

[build-system]
requires      = ["uv_build >= 0.11.6, <0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",                                  # Security assessment
    "mypy>=1.20.1",                                         # Python typing
    "pytest>=9.0.3",                                        # Testing framework
    "pytest-cov>=7.1.0",                                    # Test coverage
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",                                        # Linter and Formatter for Python
    "ty>=0.0.31",                                           #
    "types-pyyaml>=6.0.12.20260408",                        # Stub with types for PyYAML
]

[project.scripts]
listify = "spotify_lists.cli:cli"

[project.urls]
Homepage   = "https://github.com/jzer7/spotify-lists"
Repository = "https://github.com/jzer7/spotify-lists"

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]

[tool.coverage.run]
branch = true

[tool.mypy]
mypy_path = "stubs"
files = [
    "src",
    "tests",
]
check_untyped_defs          = true
disallow_any_generics       = true
disallow_any_unimported     = true # To offset someone having 'ignore_missing_imports'
disallow_incomplete_defs    = true
disallow_untyped_decorators = true
disallow_untyped_defs       = true # TOP
no_implicit_optional        = true
show_error_codes            = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_ignores         = true

exclude = ["backups/", "build", "dist", ".venv"]

[tool.pytest.ini_options]
addopts = "--cov=. --no-cov-on-fail --cov-fail-under=80.0 --strict-config --strict-markers"
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
src = [
    "src",
    "tests",
]

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
package = true
