[project]
name            = "spotify_lists"
version         = "0.1.0"
description     = "Work with Spotify Playlists"
authors         = [
    { name = "Juan Rubio", email = "jcrubio@gmail.com" },
]
license         = "MIT"
license-files   = ["LICENSE"]
readme          = "README.md"
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies    = [
    "click>=8.4.1",                                         # CLI framework
    "python-dotenv>=1.2.2",                                 # Read a .env file
    "pyyaml>=6.0.3",                                        # YAML parser/emitter
    "rich>=15.0.0",                                         # Console display and color
    "spotipy>=2.26.0",                                      # Spotify API
]

[build-system]
requires      = ["uv_build >= 0.11.8, <0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",                                  # Security assessment
    "mypy>=2.1.0",                                          # Python typing
    "pytest>=9.0.3",                                        # Testing framework
    "pytest-cov>=7.1.0",                                    # Coverage plugin for pytest
    "pytest-mock>=3.15.1",                                  # Mocking plugin for pytest
    "ruff>=0.15.15",                                        # Linter and formatter
    "ty>=0.0.40",                                           # Type checker and language server (by Astral)
    "types-pyyaml>=6.0.12.20260518",                        # Stub with types for PyYAML
    "types-requests>=2.33.0.20260408",                      # Stub with types for 'requests'
]

[project.scripts]
listify = "spotify_lists.cli:cli"

[project.urls]
Homepage   = "https://github.com/jzer7/spotify-lists"
Repository = "https://github.com/jzer7/spotify-lists"

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]

[tool.coverage.run]
branch = true

[tool.mypy]
mypy_path = "stubs"
files = [
    "src",
    "tests",
]
check_untyped_defs          = true
disallow_any_generics       = true
disallow_any_unimported     = true # To offset someone having 'ignore_missing_imports'
disallow_incomplete_defs    = true
disallow_untyped_decorators = true
disallow_untyped_defs       = true # TOP
no_implicit_optional        = true
show_error_codes            = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_ignores         = true

exclude = ["backups/", "build", "dist", ".venv"]

[tool.pytest.ini_options]
addopts = "--cov=. --no-cov-on-fail --cov-fail-under=80.0 --strict-config --strict-markers"
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
src = [
    "src",
    "tests",
]

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
package = true
exclude-newer = "7 days"
